feat: configure Frigate camera with environment variables and HA dashboards
- Move camera credentials to environment variables (FRIGATE_ prefix required)
- Add Hikvision outdoor camera with dual stream configuration (4K record, 640x360 detect)
- Configure detection zones and object filters (person, car, bicycle, motorcycle)
- Move Frigate database to local storage to avoid SQLite locking on network storage
- Update recordings storage path to /mnt/unas2/frigate for network storage
- Add three Home Assistant Lovelace dashboards for camera viewing
- Update .env.example with camera credential templates
- Extend .gitignore for custom components and backup files
- Increase recording retention from 7 to 14 days

Security improvements:
- Camera credentials externalized to environment variables
- Credentials no longer hardcoded in configuration files

Breaking changes:
- Environment variables now require FRIGATE_ prefix for Frigate config substitution
- Database moved from /media/frigate/frigate.db to /config/frigate.db
- Recordings path changed from ./storage to /mnt/unas2/frigate

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,11 @@ TZ=America/New_York
 # RTSP password for accessing Frigate streams
 FRIGATE_RTSP_PASSWORD=your-secure-password-here
 
+# Camera credentials (FRIGATE_ prefix required for use in config)
+FRIGATE_CAMERA_USERNAME=admin
+FRIGATE_CAMERA_PASSWORD=your-camera-password
+FRIGATE_CAMERA_IP=192.168.1.100
+
 # Home Assistant configuration
 HA_INTERNAL_URL=http://homeassistant:8123
 HA_EXTERNAL_URL=http://localhost:8123
