feat: add Cloudflare Tunnel support for remote access
Add cloudflared container to enable secure remote access to Home Assistant
without port forwarding. The tunnel runs as a Docker service alongside
existing containers and connects to Home Assistant via internal network.

Changes:
- Add cloudflared service to docker-compose.yml
- Add CLOUDFLARE_TUNNEL_TOKEN to .env.example
- Configure cloudflared to connect to homeassistant:8123

--- a/configs/homeassistant/configuration.yaml
+++ b/configs/homeassistant/configuration.yaml
@@ -67,3 +67,11 @@ logger:
   logs:
     homeassistant.components.mqtt: debug
     homeassistant.components.frigate: debug
+
+# HTTP configuration - to trust Cloudflare proxies:
+http:
+  use_x_forwarded_for: true
+  trusted_proxies:
+    - 172.16.0.0/12  # Docker network range
+    - 127.0.0.1
+    - ::1
