feat: add Cloudflare Tunnel support for remote access
Add cloudflared container to enable secure remote access to Home Assistant
without port forwarding. The tunnel runs as a Docker service alongside
existing containers and connects to Home Assistant via internal network.

Changes:
- Add cloudflared service to docker-compose.yml
- Add CLOUDFLARE_TUNNEL_TOKEN to .env.example
- Configure cloudflared to connect to homeassistant:8123

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,10 @@ FRIGATE_CAMERA_IP=192.168.1.100
 HA_INTERNAL_URL=http://homeassistant:8123
 HA_EXTERNAL_URL=http://localhost:8123
 
+# Cloudflare Tunnel configuration
+# Get your tunnel token from https://one.dash.cloudflare.com/
+CLOUDFLARE_TUNNEL_TOKEN=your-tunnel-token-here
+
 # MQTT configuration (if using external MQTT broker)
 # MQTT_HOST=homeassistant.local
 # MQTT_PORT=1883
