--- a/configs/frigate/config.yml
+++ b/configs/frigate/config.yml
@@ -16,10 +16,10 @@ mqtt:
 database:
   path: /config/frigate.db
 
-# Model configuration for YOLOv9-T with OpenVINO
+# Model configuration for YOLOv9-T with OpenVINO (optimized for Intel N150)
 model:
   model_type: yolo-generic
-  width: 640
+  width: 640  # Must match ONNX model compilation
   height: 640
   input_tensor: nchw
   input_dtype: float
@@ -33,27 +33,44 @@ model:
 detectors:
   ov:
     type: openvino
-    device: CPU
+    device: AUTO  # AUTO will try GPU/NPU if available, fallback to CPU
+    num_threads: 2  # Limit to 2 threads to leave CPU for other tasks
 
-# Objects to detect
+# Objects to detect (COCO-80 compatible classes only)
 objects:
   track:
     - person
     - car
     - bicycle
     - motorcycle
-    - bus
     - cat
     - dog
   filters:
     person:
-      min_area: 5000
-      max_area: 100000
-      threshold: 0.7
+      min_score: 0.70  # Increased from 0.65 to reduce false positives
+      threshold: 0.75
+      min_ratio: 0.3   # People are typically taller than wide (height/width)
+      max_ratio: 3.5   # Prevents very thin detections
+      min_area: 5000   # Minimum pixel area to avoid tiny false detections
     car:
-      min_area: 15000
-      max_area: 50000
-      threshold: 0.7
+      min_score: 0.65
+      threshold: 0.75
+      min_area: 10000  # Cars are typically larger in frame
+    bicycle:
+      min_score: 0.7
+      threshold: 0.85  # Reduced from 0.9 for better detection
+    motorcycle:
+      min_score: 0.7
+      threshold: 0.75
+    dog:
+      min_score: 0.75  # Increased from 0.7
+      threshold: 0.92  # Increased from 0.9 for even stricter detection
+      max_ratio: 2.0   # Dogs are generally wider than people (height/width)
+      min_area: 3000   # Reasonable minimum size
+    cat:
+      min_score: 0.70  # Increased from 0.65
+      threshold: 0.92  # Increased to match dog strictness
+      max_ratio: 2.0   # Similar to dog
 
 # Recording configuration
 record:
@@ -90,14 +107,24 @@ cameras:
         - path: rtsp://{FRIGATE_CAMERA_USERNAME}:{FRIGATE_CAMERA_PASSWORD}@{FRIGATE_CAMERA_IP}:554/Streaming/Channels/101
           roles:
             - record
-        # Sub stream for detection (lower bandwidth)
+        # Sub stream for detection (lower bandwidth, optimized for CPU)
         - path: rtsp://{FRIGATE_CAMERA_USERNAME}:{FRIGATE_CAMERA_PASSWORD}@{FRIGATE_CAMERA_IP}:554/Streaming/Channels/102
+          input_args: preset-rtsp-restream
           roles:
             - detect
     detect:
       width: 640    # Sub stream actual resolution
       height: 360
-      fps: 5
+      fps: 3  # Reduced from 5 to lower CPU load (every ~333ms)
+      stationary:
+        interval: 50  # Only run object detection on every 50th frame for stationary objects
+        threshold: 100  # Frames before considering object stationary
+    motion:
+      enabled: true
+      threshold: 30  # Increase to reduce false motion triggers (default: 25)
+      lightning_threshold: 0.8  # Ignore lightning flashes
+      contour_area: 50  # Minimum area in pixels for motion detection
+      improve_contrast: false  # Disable to save CPU (static outdoor scene)
     zones:
       # Define detection zones (adjust coordinates based on your camera view)
       main_area:
